@@ -1,7 +1,7 @@
 Project home page
 
-    http://www.jboss.org/boxgrinder
+    http://boxgrinder.org/
 
 Project documentation
 
-    http://community.jboss.org/docs/DOC-14358
+    http://boxgrinder.org/tutorials/
