@@ -25,7 +25,7 @@ require 'boxgrinder-build/helpers/thor-helper'
 #$stderr.reopen($stdout)
 
 if Process.uid != 0
-  puts "This program must be executed with root privileges. Try 'sudo boxgrinder-build'"
+  puts "This program must be executed with root privileges. Try 'sudo boxgrinder'"
   abort
 end
 
